@@ -19,6 +19,7 @@ Bug fixes
  - [web] fixed saving of email address for external calendar notifications (#4630)
  - [core] ignore transparent events in time conflict validation (#4539)
  - [core] fixed yearly recurrence calculator when starting from previous year
+ - [core] changes to contacts are now propagated to lists (#850, #4301, #4617)
 
 4.0.5 (2019-01-09)
 ------------------
